# BenchSim

./: .gitignore  CHANGELOG.md  README.md  main_tb.v  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchsim/: config_dialog_controller.py  editor.py  editor_search_controller.py  external_change_controller.py  i18n.py  linux_desktop_controller.py  main.py  message_dispatcher.py  messages.py  problems_controller.py  project_load_controller.py  project_selection_controller.py  project_state_controller.py  settings_dialog.py  simulation_flow_controller.py  simulation_manager.py  simulation_runner.py  tb_file_controller.py  tb_save_controller.py  ui_theme_controller.py  update_controller.py  updater.py
benchsim/themes/: dark.qss  editor_dark.json  editor_light.json  gtkwave.rc  light.qss
packaging/linux/: benchsim.desktop
packaging/pyinstaller/: BenchSim.spec
packaging/windows/: BenchSim.iss
verilog_simulator/: README.md  pyproject.toml
verilog_simulator/verilog_simulator/: __init__.py  editor.py  message_dispatcher.py  messages.py  settings_manager.py  simulation_runner.py
verilog_simulator/verilog_simulator/themes/: dark.qss
