[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "benchsim"
dynamic = ["version"]
authors = [
  { name = "Luis Miguel Capacho V.", email = "lmcapacho@gmail.com" }
]
description = "Testbench simulation runner for Icarus Verilog and GTKWave"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "PyQt6",
    "PyQt6-QScintilla",
    "vcdvcd"
]

[tool.setuptools]
packages = ["benchsim"]

[project.scripts]
benchsim = "benchsim.main:main"

[tool.setuptools_scm]
version_file = "benchsim/_version.py"
fallback_version = "0.1.0"
